书籍服务远程调用实现。 待测试。